[package]
name = "mountify"
version = "1.1.2"
edition = "2021"
description = "Globally mounted modules via OverlayFS - Rust core"

[lib]
name = "mountify"
path = "src/lib.rs"

[[bin]]
name = "mountify"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
anyhow = "1"
log = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
